--- a/.github/workflows/docker-aula.yml
+++ b/.github/workflows/docker-aula.yml
@@ -19,9 +19,9 @@ jobs:
       uses: docker/scout-action@v1.10.0
       with:
         # Docker Hub User
-        dockerhub-user: ${{ screts.DOCKER_HUB_USER }}
+        dockerhub-user: ${{ secrets.DOCKER_HUB_USER }}
         # Docker Hub PAT
-        dockerhub-password: ${{ screts.DOCKER_HUB_PASSWORD }}
+        dockerhub-password: ${{ secrets.DOCKER_HUB_PASSWORD }}
         command:
           quickview,cves
         sarif-file: docker_vuls.json
