--- a/.github/workflows/docker-aula.yml
+++ b/.github/workflows/docker-aula.yml
@@ -26,4 +26,10 @@ jobs:
           quickview,cves
         sarif-file: docker_vuls.json
 
-
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v4.3.4
+      if: always()
+      with:
+          name: docker_vuls
+          path: docker_vuls.json
+      
